--- a/FichierFXML/Utilisateur.fxml
+++ b/FichierFXML/Utilisateur.fxml
@@ -2,22 +2,21 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="nom" layoutX="225.0" layoutY="150.0" />
-      <Label layoutX="237.0" layoutY="41.0" text="Authentification">
+      <Label id="utilisateur" layoutX="247.0" layoutY="37.0" text="Utilisateur">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="252.0" layoutY="112.0" prefHeight="17.0" prefWidth="97.0" text="Nom d'utilisateur" />
-      <Label layoutX="264.0" layoutY="200.0" text="Mot de passe" />
-      <PasswordField fx:id="mdp" layoutX="225.0" layoutY="248.0" />
-      <Button layoutX="274.0" layoutY="332.0" mnemonicParsing="false" onAction="#LaValidation" text="Valider" />
+      <TextField fx:id="nom" layoutX="213.0" layoutY="166.0" />
+      <Label id="nom" layoutX="274.0" layoutY="117.0" text="Nom" />
+      <Label layoutX="266.0" layoutY="232.0" text="Prenom" />
+      <TextField fx:id="prenom" layoutX="214.0" layoutY="278.0" />
+      <Button layoutX="263.0" layoutY="343.0" mnemonicParsing="false" onAction="#SeValider" text="Valider" />
    </children>
 </Pane>
